--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
         <title>AluraBooks</title>
         <link rel="stylesheet" href="/src/css/styles.css">
         <link rel="stylesheet" href="/src/css/reset.css">
@@ -17,24 +20,18 @@
                  </label>
                  <ul class="lista-menu">
                     <li class="lista-menu__titulo">Categorias</li>
-
-                    
                     <li class="lista-menu__item">
                         <a href="#" class= "lista-menu__link">Programação</a>
                     </li>
-
                     <li class="lista-menu__item">
                         <a href="#" class= "lista-menu__link">Front-end</a>
                     </li>
-
                     <li class="lista-menu__item">
                         <a href="#" class= "lista-menu__link">Infraestrutura</a>
                     </li>
-
                     <li class="lista-menu__item">
                         <a href="#" class= "lista-menu__link">Business</a>
                     </li>
-
                     <li class="lista-menu__item">
                         <a href="#" class= "lista-menu__link">Design & UX</a>
                     </li>
@@ -47,5 +44,11 @@
                 <a href="#"><img src="/assets/img/Usuario.svg" alt="Meu perfil" class="container__imagem"></a>
             </div>
         </header>
+        <section class="banner">
+            <h2 class="banner__titulo">Já sabe por onde começar?</h2>
+            <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
+            <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
+        </section>
+
     </body>
 </html>
