--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,6 +8,10 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
         <title>AluraBooks</title>
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+        />
         <link rel="stylesheet" href="/src/css/styles.css">
         <link rel="stylesheet" href="/src/css/reset.css">
     </head>
@@ -49,6 +53,32 @@
             <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
             <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
         </section>
-
+        <section class="carrossel">
+            <h2 class="carrossel__titulo">Novos Lançamentos</h2>
+            <div class="swiper">
+                <div class="swiper-pagination"></div>
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide"><img src="/assets/img/ApacheKafka.svg" alt="Livro sobre apache kafra e spring boot da alura books"></div>
+                    <div class="swiper-slide"><img src="/assets/img/Liderança.svg" alt="Livro sobre liderança em design da alura books"></div>
+                    <div class="swiper-slide"><img src="/assets/img/Javascript.svg" alt="Livro sobre Javascript assertivo da alura books"></div>
+                    <div class="swiper-slide"><img src="/assets/img/Guia Front-end.svg" alt="Livro sobre Guia Front-end da alura books"></div>
+                    <div class="swiper-slide"><img src="/assets/img/Portugol.svg" alt="Livro sobre Portugol da alura books"></div>
+                    <div class="swiper-slide"><img src="/assets/img/Acessibilidade.svg" alt="Livro sobre Acessibilidade da alura books"></div>
+                </div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </div>
+        </section>  
+        <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+        <script>
+            const swiper = new Swiper('.swiper', {
+                spaceBetween: 10,
+                slidesPerView: 3,
+                pagination: {
+                el: '.swiper-pagination',
+                type: 'bullets',
+                },
+            });
+        </script>
     </body>
 </html>
