--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,18 +2,17 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>AluraBooks</title>
+        <link rel="stylesheet" href="/src/css/reset.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
-        <title>AluraBooks</title>
         <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
         />
         <link rel="stylesheet" href="/src/css/styles.css">
-        <link rel="stylesheet" href="/src/css/reset.css">
     </head>
     <body>
         <header class="cabecalho">
@@ -41,6 +40,7 @@
                     </li>
                 </ul>
                 <img src="/assets/img/Logo.svg" alt="Logo AluraBooks" class="container__imagem">
+                <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
             </div>
             <div class="container">
                 <a href="#"><img src="/assets/img/Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
@@ -54,7 +54,7 @@
             <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
         </section>
         <section class="carrossel">
-            <h2 class="carrossel__titulo">Novos Lançamentos</h2>
+            <h2 class="carrossel__titulo">Últimos Lançamentos</h2>
             <div class="swiper">
                 <div class="swiper-pagination"></div>
                 <div class="swiper-wrapper">
@@ -67,8 +67,109 @@
                 </div>
                 <div class="swiper-button-prev"></div>
                 <div class="swiper-button-next"></div>
+
+                <div class="card">
+                    <div class="card__descrição">
+                        <div class="descrição">
+                            <h3 class="descrição__titulo">Talvez você também se interesse por...</h3>
+                            <h2 class="descrição__titulo-livro">Angular 11 e Firebase</h2>
+                            <p class="descrição__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                        </div>
+                        <img src="/assets/img/Angular.svg" class="descrição__imagem">
+                    </div>
+                    <div class="card__botões">
+                        <ul class="botões">
+                            <li class="botões__item"><img src="/assets/img/Favoritos.svg" alt="Favoritar livro"></li>
+                            <li class="botões__item"><img src="/assets/img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
+                        </ul>
+                        <a href="#" class="botões__ancora">Saiba mais</a>
+                    </div>
+                </div>
             </div>
-        </section>  
+        </section>
+
+        <section class="carrossel">
+            <h2 class="carrossel__titulo">Mais vendidos</h2>
+            <div class="swiper">
+                <div class="swiper-pagination"></div>
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide"><img src="/assets/img/Javascript.svg" alt="Livro sobre Javascript assertivo da alura books"></div>
+                    <div class="swiper-slide"><img src="/assets/img/ApacheKafka.svg" alt="Livro sobre apache kafra e spring boot da alura books"></div>
+                    <div class="swiper-slide"><img src="/assets/img/Liderança.svg" alt="Livro sobre liderança em design da alura books"></div>
+                    <div class="swiper-slide"><img src="/assets/img/Guia Front-end.svg" alt="Livro sobre Guia Front-end da alura books"></div>
+                    <div class="swiper-slide"><img src="/assets/img/Portugol.svg" alt="Livro sobre Portugol da alura books"></div>
+                    <div class="swiper-slide"><img src="/assets/img/Acessibilidade.svg" alt="Livro sobre Acessibilidade da alura books"></div>
+                </div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+
+                <div class="card">
+                   <div class="card__descrição">
+                        <div class="descrição">
+                            <img src="/assets/img/Star 1.svg" alt="1 estrela">
+                            <img src="/assets/img/Star 1.svg" alt="2 estrela">
+                            <img src="/assets/img/Star 1.svg" alt="3 estrela">
+                            <img src="/assets/img/Star 1.svg" alt="4 estrela">
+                            <img src="/assets/img/Star 1.svg" alt="5 estrela">
+                            <h3 class="descrição__titulo">Autora do mês</h3>
+                            <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
+                            <p class="descrição__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.</p>
+                        </div>
+                        <img src="/assets/img/Perfil-escritora 1.svg" class="descrição__imagem">
+                    </div>
+                    <div class="card__botões">
+                        <ul class="botões">
+                            <li class="botões__item"><img src="/assets/img/Favoritos.svg" alt="Favoritar livro"></li>
+                            <li class="botões__item"><img src="/assets/img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
+                        </ul>
+                        <a href="#" class="botões__ancora">Saiba mais</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="topicos">
+            <h2 class="topicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
+            <ul class="topicos__lista">
+                <li class="topicos__item">
+                    <a href="#" class="topicos__link">Android</a>
+                </li>
+                <li class="topicos__item">
+                    <a href="#" class="topicos__link">Marketing Digital</a>
+                </li>
+                <li class="topicos__item">
+                    <a href="#" class="topicos__link">Agile</a>
+                </li>
+                <li class="topicos__item">
+                    <a href="#" class="topicos__link">Startups</a>
+                </li>
+                <li class="topicos__item">
+                    <a href="#" class="topicos__link">HTML & CSS</a>
+                </li>
+                <li class="topicos__item">
+                    <a href="#" class="topicos__link">Python</a>
+                </li>
+                <li class="topicos__item">
+                    <a href="#" class="topicos__link">OO</a>
+                </li>
+                <li class="topicos__item">
+                    <a href="#" class="topicos__link">Java</a>
+                </li>
+            </ul>
+        </section>
+
+        <section class="contato">
+            <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+            <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
+            <input type="email" class="contato__email" placeholder="Cadastre seu e-mail">
+        </section>
+
+        <hr/>
+
+        <footer class="rodape">
+            <h2 class="rodape__titulo">Grupo Alura</h2>
+        </footer>
+
         <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
         <script>
             const swiper = new Swiper('.swiper', {
