--- a/src/html/index.html
+++ b/src/html/index.html
@@ -19,7 +19,7 @@
         <header class="cabecalho">
             <div class="container">
                 <input type="checkbox" id="menu" class="container__botao">
-                <label for="menu">
+                <label for="menu" class="container__rotulo">
                     <span class="cabecalho__menu-hamburguer container__imagem"></span>
                  </label>
                  <ul class="lista-menu">
@@ -45,15 +45,43 @@
             </div>
 
             <ul class="opcoes">
-                <li class="opcoes__item">Categorias</li>
+                <input type="checkbox" id="opcoes-menu" class="opcoes__botao">
+                <label for="opcoes-menu" class="opcoes__rotulo">
+                    <li class="opcoes__item">Categorias</li>
+                </label>
+                <ul class="lista-menu">
+                    <li class="lista-menu__item">
+                        <a href="#" class= "lista-menu__link">Programação</a>
+                    </li>
+                    <li class="lista-menu__item">
+                        <a href="#" class= "lista-menu__link">Front-end</a>
+                    </li>
+                    <li class="lista-menu__item">
+                        <a href="#" class= "lista-menu__link">Infraestrutura</a>
+                    </li>
+                    <li class="lista-menu__item">
+                        <a href="#" class= "lista-menu__link">Business</a>
+                    </li>
+                    <li class="lista-menu__item">
+                        <a href="#" class= "lista-menu__link">Design & UX</a>
+                    </li>
+                </ul>
                 <li class="opcoes__item"><a href="#" class="opcoes__link">Favoritos</a></li>
                 <li class="opcoes__item"><a href="#" class="opcoes__link">Minha Estante</a></li>
             </ul>
 
             <div class="container">
-                <a href="#"><img src="/assets/img/Favoritos.svg" alt="Meus favoritos" class="container__imagem container__imagem-transparente"></a>
-                <a href="#"><img src="/assets/img/Compras.svg" alt="Carrinho de compras" class="container__imagem"></a>
-                <a href="#"><img src="/assets/img/Usuario.svg" alt="Meu perfil" class="container__imagem"></a>
+                <a href="#">
+                    <img src="/assets/img/Favoritos.svg" alt="Meus favoritos" class="container__imagem container__imagem-transparente">
+                </a>
+                <a href="#" class="container__link">
+                    <img src="/assets/img/Compras.svg" alt="Carrinho de compras" class="container__imagem">
+                    <p class="container__texto">Minha sacola</p>
+                </a>
+                <a href="#" class="container__link">
+                    <img src="/assets/img/Usuario.svg" alt="Meu perfil" class="container__imagem">
+                    <p class="container__texto">Meu perfil</p>
+                </a>
             </div>
         </header>
         <section class="banner">
@@ -63,77 +91,81 @@
         </section>
         <section class="carrossel">
             <h2 class="carrossel__titulo">Últimos Lançamentos</h2>
-            <div class="swiper">
-                <div class="swiper-pagination"></div>
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img src="/assets/img/ApacheKafka.svg" alt="Livro sobre apache kafra e spring boot da alura books"></div>
-                    <div class="swiper-slide"><img src="/assets/img/Liderança.svg" alt="Livro sobre liderança em design da alura books"></div>
-                    <div class="swiper-slide"><img src="/assets/img/Javascript.svg" alt="Livro sobre Javascript assertivo da alura books"></div>
-                    <div class="swiper-slide"><img src="/assets/img/Guia Front-end.svg" alt="Livro sobre Guia Front-end da alura books"></div>
-                    <div class="swiper-slide"><img src="/assets/img/Portugol.svg" alt="Livro sobre Portugol da alura books"></div>
-                    <div class="swiper-slide"><img src="/assets/img/Acessibilidade.svg" alt="Livro sobre Acessibilidade da alura books"></div>
+            <div class="carrossel__container">
+                <div class="swiper">
+                    <div class="swiper-pagination"></div>
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide"><img src="/assets/img/ApacheKafka.svg" alt="Livro sobre apache kafra e spring boot da alura books"></div>
+                        <div class="swiper-slide"><img src="/assets/img/Liderança.svg" alt="Livro sobre liderança em design da alura books"></div>
+                        <div class="swiper-slide"><img src="/assets/img/Javascript.svg" alt="Livro sobre Javascript assertivo da alura books"></div>
+                        <div class="swiper-slide"><img src="/assets/img/Guia Front-end.svg" alt="Livro sobre Guia Front-end da alura books"></div>
+                        <div class="swiper-slide"><img src="/assets/img/Portugol.svg" alt="Livro sobre Portugol da alura books"></div>
+                        <div class="swiper-slide"><img src="/assets/img/Acessibilidade.svg" alt="Livro sobre Acessibilidade da alura books"></div>
+                    </div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
                 </div>
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>
-
-                <div class="card">
-                    <div class="card__descrição">
-                        <div class="descrição">
-                            <h3 class="descrição__titulo">Talvez você também se interesse por...</h3>
-                            <h2 class="descrição__titulo-livro">Angular 11 e Firebase</h2>
-                            <p class="descrição__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                    <div class="card">
+                        <div class="card__descricao">
+                            <div class="descricao">
+                                <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
+                                <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
+                                <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                            </div>
+                            <img src="/assets/img/Angular.svg" class="descricao__imagem">
                         </div>
-                        <img src="/assets/img/Angular.svg" class="descrição__imagem">
-                    </div>
-                    <div class="card__botões">
-                        <ul class="botões">
-                            <li class="botões__item"><img src="/assets/img/Favoritos.svg" alt="Favoritar livro"></li>
-                            <li class="botões__item"><img src="/assets/img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
-                        </ul>
-                        <a href="#" class="botões__ancora">Saiba mais</a>
+                        <div class="card__botões">
+                            <ul class="botões">
+                                <li class="botões__item"><img src="/assets/img/Favoritos.svg" alt="Favoritar livro"></li>
+                                <li class="botões__item"><img src="/assets/img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
+                            </ul>
+                            <a href="#" class="botões__ancora">Saiba mais</a>
+                        </div>
                     </div>
                 </div>
-            </div>
         </section>
+        
 
         <section class="carrossel">
             <h2 class="carrossel__titulo">Mais vendidos</h2>
-            <div class="swiper">
-                <div class="swiper-pagination"></div>
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img src="/assets/img/Javascript.svg" alt="Livro sobre Javascript assertivo da alura books"></div>
-                    <div class="swiper-slide"><img src="/assets/img/ApacheKafka.svg" alt="Livro sobre apache kafra e spring boot da alura books"></div>
-                    <div class="swiper-slide"><img src="/assets/img/Liderança.svg" alt="Livro sobre liderança em design da alura books"></div>
-                    <div class="swiper-slide"><img src="/assets/img/Guia Front-end.svg" alt="Livro sobre Guia Front-end da alura books"></div>
-                    <div class="swiper-slide"><img src="/assets/img/Portugol.svg" alt="Livro sobre Portugol da alura books"></div>
-                    <div class="swiper-slide"><img src="/assets/img/Acessibilidade.svg" alt="Livro sobre Acessibilidade da alura books"></div>
+            <div class="carrossel__container">
+                <div class="swiper">
+                    <div class="swiper-pagination"></div>
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide"><img src="/assets/img/Javascript.svg" alt="Livro sobre Javascript assertivo da alura books"></div>
+                        <div class="swiper-slide"><img src="/assets/img/ApacheKafka.svg" alt="Livro sobre apache kafra e spring boot da alura books"></div>
+                        <div class="swiper-slide"><img src="/assets/img/Liderança.svg" alt="Livro sobre liderança em design da alura books"></div>
+                        <div class="swiper-slide"><img src="/assets/img/Guia Front-end.svg" alt="Livro sobre Guia Front-end da alura books"></div>
+                        <div class="swiper-slide"><img src="/assets/img/Portugol.svg" alt="Livro sobre Portugol da alura books"></div>
+                        <div class="swiper-slide"><img src="/assets/img/Acessibilidade.svg" alt="Livro sobre Acessibilidade da alura books"></div>
+                    </div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
                 </div>
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>
-
-                <div class="card">
-                   <div class="card__descrição">
-                        <div class="descrição">
-                            <img src="/assets/img/Star 1.svg" alt="1 estrela">
-                            <img src="/assets/img/Star 1.svg" alt="2 estrela">
-                            <img src="/assets/img/Star 1.svg" alt="3 estrela">
-                            <img src="/assets/img/Star 1.svg" alt="4 estrela">
-                            <img src="/assets/img/Star 1.svg" alt="5 estrela">
-                            <h3 class="descrição__titulo">Autora do mês</h3>
-                            <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
-                            <p class="descrição__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.</p>
+                    <div class="card">
+                    <div class="card__descricao">
+                            <div class="descricao">
+                                <img src="/assets/img/Star 1.svg" alt="1 estrela">
+                                <img src="/assets/img/Star 1.svg" alt="2 estrela">
+                                <img src="/assets/img/Star 1.svg" alt="3 estrela">
+                                <img src="/assets/img/Star 1.svg" alt="4 estrela">
+                                <img src="/assets/img/Star 1.svg" alt="5 estrela">
+                                <h3 class="descricao__titulo">Autora do mês</h3>
+                                <h2 class="descricao__titulo-livro">Juliana Agarikov</h2>
+                                <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.</p>
+                            </div>
+                            <img src="/assets/img/Perfil-escritora 1.svg" class="descricao__imagem">
                         </div>
-                        <img src="/assets/img/Perfil-escritora 1.svg" class="descrição__imagem">
-                    </div>
-                    <div class="card__botões">
-                        <ul class="botões">
-                            <li class="botões__item"><img src="/assets/img/Favoritos.svg" alt="Favoritar livro"></li>
-                            <li class="botões__item"><img src="/assets/img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
-                        </ul>
-                        <a href="#" class="botões__ancora">Saiba mais</a>
+                        <div class="card__botões">
+                            <ul class="botões">
+                                <li class="botões__item"><img src="/assets/img/Favoritos.svg" alt="Favoritar livro"></li>
+                                <li class="botões__item"><img src="/assets/img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
+                            </ul>
+                            <a href="#" class="botões__ancora">Saiba mais</a>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </div>    
         </section>
 
         <section class="topicos">
@@ -167,8 +199,10 @@
         </section>
 
         <section class="contato">
-            <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
-            <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
+            <div class="contato__descricao">
+                <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+                <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
+            </div>
             <input type="email" class="contato__email" placeholder="Cadastre seu e-mail">
         </section>
 
@@ -176,6 +210,81 @@
 
         <footer class="rodape">
             <h2 class="rodape__titulo">Grupo Alura</h2>
+            <ul class="lista-rodape">
+                <li class="lista-rodape__titulo">Educação</li>
+                <li class="lista-rodape__item">
+                    <img src="/assets/img/CasaDoCodigo.svg" alt="Logo da casa do código">
+                    <a href="#" class="lista-rodape__link">Casa do código</a>
+                </li>
+                <li class="lista-rodape__item">
+                    <img src="/assets/img/Caelum.svg" alt="Logo da Caelum">
+                    <a href="#" class="lista-rodape__link">Caelum</a>
+                </li>
+            </ul>
+
+            <ul class="lista-rodape">
+                <li class="lista-rodape__titulo">Educação Online</li>
+                <li class="lista-rodape__item">
+                    <img src="/assets/img/Alura.svg" alt="Logo da Alura">
+                    <a href="#" class="lista-rodape__link">Alura</a>
+                </li>
+                <li class="lista-rodape__item">
+                    <img src="/assets/img/AluraEmpresas.svg" alt="Logo da Alura Empresas">
+                    <a href="#" class="lista-rodape__link">Alura para Empresas</a>
+                </li>
+                <li class="lista-rodape__item">
+                    <img src="/assets/img/AluraLATAM.svg" alt="Logo da Alura Latam">
+                    <a href="#" class="lista-rodape__link">Alura LATAM</a>
+                </li>
+                <li class="lista-rodape__item">
+                    <img src="/assets/img/AluraStart.svg" alt="Logo da Alura Start">
+                    <a href="#" class="lista-rodape__link">Alura Start</a>
+                </li>
+                <li class="lista-rodape__item">
+                    <img src="/assets/img/MusicDot.svg" alt="Logo da Music Dot">
+                    <a href="#" class="lista-rodape__link">Music Dot</a>
+                </li>
+                <li class="lista-rodape__item">
+                    <img src="/assets/img/AluraLingua.svg" alt="Logo da Alura Lingua">
+                    <a href="#" class="lista-rodape__link">Alura Lingua</a>
+                </li>
+                <li class="lista-rodape__item">
+                    <img src="/assets/img/PM3.svg" alt="Logo da PM3">
+                    <a href="#" class="lista-rodape__link">PM3</a>
+                </li>
+            </ul>
+
+            <ul class="lista-rodape">
+                <li class="lista-rodape__titulo">Comunidade</li>
+                <li class="lista-rodape__item">
+                    <img src="/assets/img/HipstersTech.svg" alt="Logo do Hipsters ponto Tech">
+                    <a href="#" class="lista-rodape__link">Hipsters ponto Tech</a>
+                </li>
+                <li class="lista-rodape__item">
+                    <img src="/assets/img/ScubaDev.svg" alt="Logo do Scuba Dev">
+                    <a href="#" class="lista-rodape__link">Scuba Dev</a>
+                </li>
+                <li class="lista-rodape__item">
+                    <img src="/assets/img/LayersTech.svg" alt="Logo do Layers ponto Tech">
+                    <a href="#" class="lista-rodape__link">Layers ponto Tech</a>
+                </li>
+                <li class="lista-rodape__item">
+                    <img src="/assets/img/LikeABoss.svg" alt="Logo do Like a Boss">
+                    <a href="#" class="lista-rodape__link">Like a Boss</a>
+                </li>
+                <li class="lista-rodape__item">
+                    <img src="/assets/img/CarreiraSemFronteira.svg" alt="Logo do Carreira sem fronteiras">
+                    <a href="#" class="lista-rodape__link">Carreira sem fronteiras</a>
+                </li>
+                <li class="lista-rodape__item">
+                    <img src="/assets/img/HipstersJobs.svg" alt="Logo do Hipsters ponto jobs">
+                    <a href="#" class="lista-rodape__link">Hipsters ponto jobs</a>
+                </li>
+                <li class="lista-rodape__item">
+                    <img src="/assets/img/GUJ.svg" alt="Logo dO GUJ">
+                    <a href="#" class="lista-rodape__link">GUJ</a>
+                </li>
+            </ul>
         </footer>
 
         <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
